--- a/composer.json
+++ b/composer.json
@@ -10,13 +10,14 @@
         }
     ],
     "require": {
-        "php": ">=7.0",
-        "guzzlehttp/guzzle": "^6.0",
+        "php": ">=7.2.5",
+        "guzzlehttp/guzzle": "^7.0",
         "tightenco/collect": "^5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "^6.0",
-        "laravel/lumen-framework": "5.5.*"
+        "phpunit/phpunit": "^8.0",
+        "laravel/lumen-framework": "5.5.*",
+        "dms/phpunit-arraysubset-asserts": "0.1.*"
     },
     "autoload": {
         "files": [
